maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:83: error: not found: value indice
    indice = getIndication(x, y)
    ^ShortestPathMaze:84: error: not found: value indice
    plusCourt(x, y, indice)
                    ^ShortestPathMaze:92: error: value Sud is not a member of object plm.universe.Direction
    setDirection(Direction.Sud)
                           ^ShortestPathMaze:97: error: value Nord is not a member of object plm.universe.Direction
    setDirection(Direction.Nord)
                           ^ShortestPathMaze:102: error: value Est is not a member of object plm.universe.Direction
    setDirection(Direction.Est)
                           ^ShortestPathMaze:107: error: value Ouest is not a member of object plm.universe.Direction
    setDirection(Direction.Ouest)
                           ^